force-app/main/default/objects/TVE_Work_Code_Matrix__mdt/TVE_Work_Code_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>TVE Work Code Matrix</label>
    <pluralLabel>TVE Work Code Matrixs</pluralLabel>
</CustomObject>