force-app/main/default/objects/TVE_Work_Code_Matrix__mdt/fields/COMT_MATERIALCODE1__c.field-meta.xml
<CustomField>
    <fullName>COMT_MATERIALCODE1__c</fullName>
    <label>COMT MATERIAL CODE 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>