force-app/main/default/objects/TVE_Work_Code_Matrix__mdt/fields/Contestability__c.field-meta.xml
<CustomField>
    <fullName>Contestability__c</fullName>
    <label>Contestability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>