force-app/main/default/objects/TVE_Work_Code_Matrix__mdt/fields/CU_Design__c.field-meta.xml
<CustomField>
    <fullName>CU_Design__c</fullName>
    <label>CU Design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>