force-app/main/default/objects/TVE_Work_Code_Matrix__mdt/fields/DSGN_MATERIALCODE2__c.field-meta.xml
<CustomField>
    <fullName>DSGN_MATERIALCODE2__c</fullName>
    <label>DSGN MATERIAL CODE 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>