force-app/main/default/objects/TVE_Work_Code_Matrix__mdt/fields/Work_Code__c.field-meta.xml
<CustomField>
    <fullName>Work_Code__c</fullName>
    <label>Work Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>