force-app/main/default/objects/TVE_Work_Code_Matrix__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Job_Type__c</columns>
    <columns>Work_Code__c</columns>
    <columns>Contestability__c</columns>
    <columns>CU_Design__c</columns>
    <columns>COMT_MATERIALCODE1__c</columns>
    <columns>COMT_MATERIALCODE2__c</columns>
    <columns>PREQ_MATERIALCODE1__c</columns>
    <columns>PREQ_MATERIALCODE2__c</columns>
    <columns>DSGN_MATERIALCODE1__c</columns>
    <columns>DSGN_MATERIALCODE2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>